# Lenia-3d

./: Cargo.toml  README.md
.beads/: issues.jsonl
.github/workflows/: build-release.md  build-release.yml
crates/lenia-core/: Cargo.toml
crates/lenia-core/src/: backend.md  backend.rs  fft.md  fft.rs  field.md  field.rs  growth.md  growth.rs  kernel.md  kernel.rs  lib.md  lib.rs  multichannel.md  multichannel.rs  multichannel_fft.md  multichannel_fft.rs  params.md  params.rs  reference.md  reference.rs  rle.md  rle.rs  seed.md  seed.rs  simulator.md  simulator.rs  species.md  species.rs
crates/viewer-egui/: Cargo.toml
crates/viewer-egui/src/: app.md  app.rs  kernel_preview.md  kernel_preview.rs  main.md  main.rs  render.md  render.rs  viewport3d.md  viewport3d.rs  volume_raymarch.md  volume_raymarch.wgsl  volume_wgpu.md  volume_wgpu.rs
docs/: roadmap.md
