[package]
name = "viewer-egui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
eframe = { workspace = true, features = ["wgpu"] }
glam = "0.30.8"
lenia-core = { path = "../lenia-core" }
rand.workspace = true
